--- a/Cibercomerciante/Vendedores/templates/Agregar_producto.html
+++ b/Cibercomerciante/Vendedores/templates/Agregar_producto.html
@@ -26,6 +26,13 @@
 			</div>
 
 			<div class="control-group">
+				<label class="control-label" for="unidades">Unidades del producto</label>
+				<div class="controls">
+					<input  type="number" name='unidades' id="unidades" placeholder="unidades" required></input>
+				</div>
+			</div>
+
+			<div class="control-group">
 				<label class="control-label" for="precio_compra">Precio de compra</label>
 				<div class="controls">
 					<input  type="number" maxlength="8" name='precio_compra' id="precio_compra" placeholder="Precio de compra" required></input>
