--- a/Cibercomerciante/Vendedores/templates/Perfil_vendedores_usuarios.html
+++ b/Cibercomerciante/Vendedores/templates/Perfil_vendedores_usuarios.html
@@ -28,7 +28,7 @@
 			</th>
 			<th>
 				<div class="adduser">
-					<a href="/agregar_usuariov/" ><i class="icon-user-plus " id="ic"></i></a>
+					<a href="/agregar_usuariov/" ><i class="fa fa-user-plus fa-3x" id="ic"></i></a>
 				</div>
 			</th>
 		</tr>
