--- a/Cibercomerciante/Compradores/templates/Reportes/Perfil_compradores_reportes.html
+++ b/Cibercomerciante/Compradores/templates/Reportes/Perfil_compradores_reportes.html
@@ -8,4 +8,19 @@
 
 <h1> Reportes</h1>
 
+<div class="row">
+  <div class="span6">
+
+
+<iframe width=100% height=75%  src="http://localhost:14342/ReportesCibercomerciante/reporte?reporte=d&par=34" frameborder="0"></iframe>
+
+</div>
+<div class="span6">
+
+<iframe width=100% height=75%  src="http://localhost:14342/ReportesCibercomerciante/reporte?reporte=d&par=34" frameborder="0"></iframe>
+
+</div>
+<!-- fin row  -->
+</div>
+
 {% endblock %}
