--- a/Cibercomerciante/Gestion/templates/Administrador/todosProductos_admin copia.html
+++ b/Cibercomerciante/Gestion/templates/Administrador/todosProductos_admin copia.html
@@ -5,6 +5,9 @@
 {% block empresaClase %}class="tab-pane active{% endblock %}
 
 {% block empresa %}
+
+<h1>Listado Productos</h1>
+
 <div class="tabla">
 	<table class="table table-hover table-bordered eliminar">
 	<tr>
