--- a/Cibercomerciante/Gestion/templates/Administrador/Productos/Productos_admin.html
+++ b/Cibercomerciante/Gestion/templates/Administrador/Productos/Productos_admin.html
@@ -29,12 +29,12 @@
 		<td>{{i.categoria.cat_producto}}</td>
 		<td>{{i.categoria}}</td>
 		<td>
-			<a href="/visualizarProducto/{{i.pk}}"><i class="icon-user" id="ic2"></i></a>
+			<a href="/detalleProducto/{{i.pk}}"><i class="icon-user" id="ic2"></i></a>
 
 
 		</td>
 		<td>
-			<a href="/modificarProductoformulario/{{i.pk}}"><i class="icon-pencil" id="ic2"></i></a>
+			<a href="/modificarProducto/{{i.pk}}/"><i class="icon-pencil" id="ic2"></i></a>
 		</td>
 		<td>
 			<a  data-toggle="modalC" data-target="#myModalC" nombre="{{i.nombre_producto}}" subcategoria="{{i.categoria}}" precioCompra="{{i.costo}}" PrecioVenta="{{i.costo_venta}}" descuento="{{i.descuento}}" iva="{{i.iva.porcentaje}}" descripcion="{{i.descripcion}}" imagen="{{i.imagen.url}}" presentacion="{{i.presentacion}}" empresa="{{i.empresa}}" producto="{{i.pk}}" class="eliminar_productos" ><i class="icon-cancel-circled" ></i></a>
