--- a/Cibercomerciante/Gestion/templates/Administrador/Usuarios/Usuarios_admin.html
+++ b/Cibercomerciante/Gestion/templates/Administrador/Usuarios/Usuarios_admin.html
@@ -1,5 +1,12 @@
 {% extends 'Administrador/BaseAdministrador.html' %}
-{% block administrador %}
+
+{% block listaUsuarioClase %} class="active" {% endblock %}
+
+{% block usuarioClase %}class="tab-pane active{% endblock %}
+
+{% block usuario %}
+
+<h1>Usuarios</h1>
 <div class="tabla">
 	<table class="table table-hover table-bordered eliminar">
 
