--- a/Cibercomerciante/Vendedores/templates/BaseVendedores.html
+++ b/Cibercomerciante/Vendedores/templates/BaseVendedores.html
@@ -1,14 +1,16 @@
 <html>
 	<head>
-		<title>{% block titulo %}{% endblock %}</title>
+	<title>{% block titulo %}{% endblock %}</title>
+	<link rel="stylesheet" type="text/css" href="/static/css/style-generico.css">
 
-		
 	<script type="text/javascript" src="/static/js/jquery-1.8.3.js"></script>
 	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/static/font-awesome/css/font-awesome.min.css">
+
 	<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.js"></script>
 
 	<script type="text/javascript" src="/static/js/bootstrap.js"></script>
+	
 
 
 	<script>
@@ -58,28 +60,54 @@ function sameOrigin(url) {
 });
     </script>
     <script type="text/javascript" src="/static/js/funciones.js"></script>
+    <script type="text/javascript" src="/static/js/funcionesCompradores.js"></script>
+    
 	</head>
 	<body>
-		<!--Encabezado de la pagina-->
-		<header>
-			<h1>CiberComerciante</h1>
-		</header>
-		<!--Cuerpo de la pagina-->
-		<section>
+<!--Encabezado de la pagina-->
+	<header>
+	</header>
+	<!--Cuerpo de la pagina-->
+	<section>
 		<!--Barra de Menu-->
-			<div class="navbar">
-			  <div class="navbar-inner">
-			    <a class="brand" href="#">
-			    	<i class="fa fa-user fa-2x fa-fw"></i> Nombre de la empresa
-			    </a>
-			    <a href="#" class='pull-right'>
-			    	<i class="fa fa-cog fa-2x fa-fw pull-right"></i>Settings
-			    </a>
-			    <a href="/salir" class='pull-right'>
-			    	<i class="fa fa-sign-out fa-2x fa-fw pull-right"></i>Logout
-			    </a>
-			  </div>
-			</div>
+		<div class="navbar">
+			<div class="navbar-inner ">
+				<a href="" class="brand">
+					<img src="/static/img/titulo.png" style="height:25px" alt="CiberComerciante">
+				</a>
+
+				<ul class="nav pull-right">
+
+				<a class=" pull-right brand" href="#">
+					<i class="fa fa-user fa-lg"></i> Usuario: {{user.username}}
+				</a>
+
+				<a href="#" class='pull-right brand'>
+					<i class="fa fa-cog fa-lg pull-right"></i>Settings
+				</a>
+				<a href="/salir" class='pull-right brand'>
+					<i class="fa fa-sign-out fa-lg pull-right"></i>Logout
+				</a>
+
+				<ul class="nav nav-tabs pull-right">
+					<li class="dropdown">
+						<a class="dropdown-toggle"
+						data-toggle="dropdown"
+						href="#">
+						<span class="badge"> {{ pedidos.count }} </span> Mis Pedidos 
+						<b class="caret"></b>
+					</a>
+					<ul class="dropdown-menu">
+						{% for i in pedidos %}
+						<li><a href="/detallePedido/{{i.pk}}/">{{ i.vendedor.nombre_empresa }} j</a></li>
+						{% endfor %}
+
+					</ul>
+				</li>
+				</ul>
+				</ul>
+		</div>
+	</div>
 		<!--Panel de secciones con menu izquierdo-->
 			<div class="tabbable tabs-left">
 		<!--lista izquierda de menu de opciones-->
