--- a/Cibercomerciante/Compradores/templates/Facturacion/Perfil_compradores_ventas.html
+++ b/Cibercomerciante/Compradores/templates/Facturacion/Perfil_compradores_ventas.html
@@ -99,9 +99,9 @@
 </table>
 <!-- <button class="btn pull-right">Confirmar</button> -->
                                  
-      <button   type="submit" class="btn pull-right">Pagar</button>           
+      <!-- <button   type="submit" class="btn pull-right">Pagar</button>            -->
 </form>
-      <button   id="generarFactura" class="btn pull-right">Pagar Factura</button>           
+      <button   id="generarFactura" class="btn btn-info pull-right">Generar Factura</button>           
 
 
 <!-- <form action="/generar_pdf/" class='formularioTablasAjax' method = "POST">
