--- a/Cibercomerciante/Gestion/templates/Login.html
+++ b/Cibercomerciante/Gestion/templates/Login.html
@@ -74,7 +74,7 @@ function sameOrigin(url) {
 			    </a>
 		
 
-  				<form class="form-horizontal pull-right navbar-form" method="POST" action="/logearse/">
+  				<form  style="margin-top:20px;"  class="form-horizontal pull-right navbar-form" method="POST" action="/logearse/">
   					{% csrf_token %}
 
              		<div class="input-group input-group-lg pull-right login2">
@@ -85,7 +85,7 @@ function sameOrigin(url) {
 
 					</div>
 					<div class="login">
-  						<a href="">recuperar contraseña</a>
+  						<a href=""><i class="fa fa-unlock "></i> Recuperar contraseña</a>
   					</div>
             	</form>
 
