--- a/Cibercomerciante/Vendedores/templates/Perfil_vendedores_reportes.html
+++ b/Cibercomerciante/Vendedores/templates/Perfil_vendedores_reportes.html
@@ -6,6 +6,42 @@
 {% block reporteClase %}class="tab-pane active{% endblock %}
 {% block reporte %}
 
-<h1> Reportes</h1>
+<h1> Reportesd</h1>
+
+<hr>
+<ul class="thumbnails">
+
+  <li class="span4">
+    <div class="thumbnail">
+      <img src="/static/img/logo.png" alt="">
+      <h4><a href="/detalleReporteVendedor/001pedidosVendedor/">Listado de Pedidos.</a></h4> 
+      <p>Puede seleccionar el listado de pedidos junto sus detalles, filtrandolo por fechas.</p>
+    </div>
+  </li>
+
+   <li class="span4">
+    <div class="thumbnail">
+      <img src="/static/img/logo.png" alt="">
+      <h4>Listado de productos.</h4>
+      <p>Lista de productos juntos con su descripcion y porcentaje que representa en las ventas generales.</p>
+    </div>
+  </li>
+   <li class="span4">
+    <div class="thumbnail">
+      <img src="/static/img/logo.png" alt="">
+      <h4>Estadisticas de Ventas</h4>
+      <p>El producto mas vendido, el producto que mas ganancias genera, el producto mas vendido por empresas,</p>
+    </div>
+  </li>
+   <li class="span4">
+    <div class="thumbnail">
+      <img src="/static/img/logo.png" alt="">
+      <h3>Thumbnail label</h3>
+      <p>Thumbnail caption...</p>
+    </div>
+  </li>
+  
+</ul>
+
 
 {% endblock  %}
