--- a/Cibercomerciante/Vendedores/templates/Reportes/Perfil_vendedores_reportes.html
+++ b/Cibercomerciante/Vendedores/templates/Reportes/Perfil_vendedores_reportes.html
@@ -1,9 +1,9 @@
-{% extends 'BaseCompradores.html' %}
+{% extends 'BaseVendedores.html' %}
+
 
 {% block listaReporteClase %} class="active" {% endblock %}
 
 {% block reporteClase %}class="tab-pane active{% endblock %}
-
 {% block reporte %}
 
 <h1> Reportes</h1>
@@ -47,4 +47,5 @@
   
 </ul>
 
-{% endblock %}
+
+{% endblock  %}
