--- a/Cibercomerciante/Compradores/templates/BaseCompradores.html
+++ b/Cibercomerciante/Compradores/templates/BaseCompradores.html
@@ -7,7 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/static/font-awesome/css/font-awesome.min.css">
 
-	<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.js"></script>
+	<!-- // <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.js"></script> -->
+	<script src="/static/js/jquery.validate.js"></script>
+
 
 	<script type="text/javascript" src="/static/js/bootstrap.js"></script>
 	
@@ -80,17 +82,28 @@ function sameOrigin(url) {
 				<ul class="nav pull-right">
 
 				<a class=" pull-right brand" href="#">
-					<i class="fa fa-user fa-lg"></i> Usuario: {{user.username}}
+					<i class="fa fa-user fa-lg"></i> Comprador: {{user.username}}
 				</a>
 
-				<a href="#" class='pull-right brand'>
-					<i class="fa fa-cog fa-lg pull-right"></i>Settings
-				</a>
-				<a href="/salir" class='pull-right brand'>
-					<i class="fa fa-sign-out fa-lg pull-right"></i>Logout
-				</a>
+					<!-- cambiar rol -->
+					<ul class="nav nav-tabs ">
+						<li class="dropdown">
+							<a class="dropdown-toggle"
+							data-toggle="dropdown"
+							href="#">
+									<i class="fa fa-cog fa-lg "></i> Cambiar Rol <b class="caret"></b>
+							</a>
+							<ul class="dropdown-menu">
+								<li><a href="/inicioCompradorProductos/">Comprador</a></li>
+								<li><a href="/inicioVendedorCatalogo/">Vendedor</a></li>
 
-				<ul class="nav nav-tabs pull-right">
+							</ul>
+						</li>
+					</ul>
+					<!-- fin cambia rol -->
+				
+
+				<ul class="nav nav-tabs">
 					<li class="dropdown">
 						<a class="dropdown-toggle"
 						data-toggle="dropdown"
@@ -106,6 +119,9 @@ function sameOrigin(url) {
 					</ul>
 				</li>
 				</ul>
+				<a href="/salir" class='pull-right brand'>
+					<i class="fa fa-sign-out fa-lg pull-right"></i>Salir
+				</a>
 				</ul>
 		</div>
 	</div>
