--- a/Cibercomerciante/Vendedores/templates/Pedidos/Detalle_pedido_vendedor.html
+++ b/Cibercomerciante/Vendedores/templates/Pedidos/Detalle_pedido_vendedor.html
@@ -100,10 +100,21 @@
 					<!-- <input type="submit" name="Guardar" value="Guardar" class="btn"> -->
 				</td>
 				<td>
-					<form action="/pedidoTmpInventario/" method="POST">
+					<form action="/pedidoTmpInventarioDescargar/" method="POST">
 					{% csrf_token %}
 						<input type="hidden"  name="pedido" value="{{items.0.pedido.pk}}" ></input> 
-						<button type="submit" class="btn btn-success" ><i class="fa fa-check-circle-o"></i> Despachado</button>
+						
+
+{% if p.estado_pedido = 'Pendiente Despacho' %}
+
+						<button type="submit" class="btn btn-info" ><i class="fa fa-check-circle-o"></i> Despachar</button>
+{% else %}
+
+						<a class="btn btn-success" ><i class="fa fa-check-circle-o"></i> Despachado</a>
+
+{% endif %}
+
+
 					</form>
 				</td>
 		</table >
