--- a/Cibercomerciante/Vendedores/templates/Pedidos/Perfil_vendedores_pedidos.html
+++ b/Cibercomerciante/Vendedores/templates/Pedidos/Perfil_vendedores_pedidos.html
@@ -20,8 +20,8 @@
 	{% for i in ped %}
 	<tr>
 		<td> {{i.comprador.nombre_empresa}} </td>
-		<td> {{ i.estado_pedido}}</td>
-		<td> <a href="{% if i.estado_pedido = 'No Pago' %}  /detallePedidoVendedor/{{i.pk}}/ {% endif %}"><i class="fa fa-clipboard fa-lg"></i></a> </td>
+		<td> {% if  i.estado_pedido = 'Pago'%} Despachado {% else %}  {{i.estado_pedido}}{% endif%}</td>
+		<td> <a href="/detallePedidoVendedor/{{i.pk}}/"><i class="fa fa-clipboard fa-lg"></i></a> </td>
 	</tr>
 	{% endfor %}
 	
